# qtnew

./: CMakeLists.txt  SETUP_GUIDE.md  TRS4Sims.pro  main.cpp
data/: config_user.json  history_points.json
data/notepad/: uncategorized.txt
qml/: Main.qml
qml/components/: AnimatedProgressBar.qml  AppButton.qml  FolderButton.qml  HeaderBar.qml  LogViewer.qml  NavItem.qml  Sidebar.qml  StatCard.qml  StatCardsRow.qml  ThemeTransition.qml  ToggleSwitch.qml
qml/dialogs/: CategorySelectorDialog.qml  DestinationDialog.qml  SettingsDialog.qml
qml/panels/: CopyboardPanel.qml  DownloadPanel.qml  DuplicatesPanel.qml  HomePanel.qml  NotepadPanel.qml
src/: AppConfig.cpp  AppConfig.h  AppLogger.cpp  AppLogger.h  ClipboardMonitor.cpp  ClipboardMonitor.h  DownloadStats.cpp  DownloadStats.h  DuplicateScanner.cpp  DuplicateScanner.h  NotepadManager.cpp  NotepadManager.h  ProcessRunner.cpp  ProcessRunner.h  SessionHistory.cpp  SessionHistory.h  ThemeManager.cpp  ThemeManager.h
tsr_downloader/: TSRDownload.py  TSRSession.py  _current_batch.txt  config.json  logger.py  main.py
